# lscealice

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Untitled.pkl  alice.ipynb  alice.py  init_data.ipynb  load_code.ipynb  lscealice.py  makefile  post_alig_for_agnese.ipynb  pyproject.toml  s  test.csv  tox.ini
.github/actions/set-up-poetry/: action.yml
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.html  index.rst  usage.rst
docs/_templates/: page.html  versions.html
lscealice/: .ALICE.py.swp  .dialogs.py.swp  .figures.py.swp  ALICE.py  __init__.py  dialogs.py  dialogtools.py  dic.py  excel.py  export.py  figures.py  load.py  system-test.py  system.py  utils.py
lscealice/dialogs/: newtiepoint.py
lscealice/draw/: artist.py  limits.py
src/lscealice/: ALICE.py  app.py  export.py  figures.py  load.py  magic.py  plt.py  utils.py
tutorial/: example_data.ods  example_metadata.ods  readme.txt
