[tool.poetry]
name = "lscealice"
version = "0.1.9"
description = "A versatile tkinter interface to align icecore data"
authors = ["Adrien Ooms"]
license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
openpyxl = "^3.1.5"
odfpy = "^1.4.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
tox = "^4.17.0"
pre-commit = "^3.4.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.5.6"

[tool.poetry.group.type]
optional = true

[tool.poetry.group.type.dependencies]
pyright = "^1.1.342"
pandas-stubs = "^2.2.2.240807"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.23.2"
pytest-xdist = "^3.3.1"

[tool.poetry.group.test-watch]
optional = true

[tool.poetry.group.test-watch.dependencies]
pytest-watcher = "^0.4.2"

[tool.poetry.group.cover]
optional = true

[tool.poetry.group.cover.dependencies]
pytest-cov = "^4.1.0"


[tool.poetry.group.profile]
optional = true

[tool.poetry.group.profile.dependencies]
pytest-profiling = "^1.7.0"
gprof2dot = "^2022.7.29"


[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
pdbpp = "^0.10.3"


[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
coverage = "^7.3.4"


[tool.poetry.group.licenses]
optional = true

[tool.poetry.group.licenses.dependencies]
pip-licenses = "^4.3.3"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
sphinx-rtd-theme = ">=1.3,<3.0"
sphinx-multiversion = "^0.2.4"
sphinx-automodapi = "^0.16.0"


[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
bump-my-version = ">=0.15.3,<0.17.0"



[tool.bumpversion]
current_version = "0.0.15"
commit = true
commit_args = "--no-verify"
message = ":hatching_chick: release: Bump version from v{current_version} to v{new_version}."
tag = true
tag_name = "v{new_version}"
tag_message = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
key_path = "tool.poetry.version"


[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
ignore = [
	"E501" # NOTE `ruff format` takes care of that.
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "*-test.py"
python_classes = "Test"
python_functions = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lscealice = "lscealice:launch"
lscealiceql = "lscealice:quicklaunch"
